# BoardGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  launch.vs.json
source/DontWorry/: CMakeLists.txt  main.cpp
source/EmsScript/: build.ps1  game.cpp  game.h  hello_world_fib.cpp  index.js  index.wasm  server.py
source/FastFloor/: CMakeLists.txt  engine.cpp  engine.h  game.cpp  game.h  main.cpp  model.cpp  model.h  vcpkg.json
source/FastFloor/engine/: buffer.h  engine.cpp  engine.h  shader.cpp  shader.h
source/FastFloor/engine/objects/: camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  object.cpp  object.hpp  rectangle.hpp  shape.cpp  shape.hpp  texture.hpp  transform.cpp  transform.hpp
source/FastFloor/engine/objects/shapes/: area.cpp  area.hpp  cuboid.cpp  cuboid.hpp  line.hpp  polyline.hpp  rectangle.hpp
source/FastFloor/engine/shader/: SimpleVertexShader
source/FastFloor/shader/: Colored.fs  Complex.vs  Coords.fs  Coords.vs  Simple.fs  Simple.vs
source/FastFloor/source/: engine.cpp  engine.h  sdl2.h
source/FastFloor/source/objects/: camera.cpp  camera.hpp
source/FastFloor/source/shapes/: area.cpp  area.hpp  cuboid.cpp  cuboid.hpp  icosphere.cpp  line.cpp  line.hpp  polyline.cpp  polyline.hpp  rectangle.cpp  rectangle.hpp  shape.cpp  shape.hpp
source/FastFloor/source/shapes/base/: buffer.cpp  buffer.hpp  common.hpp  geometry.cpp  geometry.hpp  mesh.hpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
source/LudoBoard/: CMakeLists.txt  MagnumApp.cpp  MagnumApp.h  main.cpp
source/TicTacToe/: CMakeLists.txt  main.cpp
source/WallPaint/Source/: area.cpp  area.hpp  ball.cpp  ball.hpp  building.cpp  building.hpp  cube.cpp  cube.hpp  cuboid.cpp  cuboid.hpp  geometry.cpp  geometry.hpp  icosphere.hpp  line.cpp  main.cpp  object.cpp  object.hpp  objmodel.cpp  objmodel.hpp  polyline.cpp  rectangle.cpp  room.cpp  room.hpp  servertcp.cpp  servertcp.hpp  serverudp.cpp  serverudp.hpp  sessiontcp.cpp  sessiontcp.hpp  sfml.cpp  sfml.hpp  shape.hpp  texmodel.cpp  texmodel.hpp  textline2d.cpp  textline2d.hpp  texture.cpp  texture.hpp  texturemanager.cpp  texturemanager.hpp  (+6 more)
source/WallPaint/Textures/: FontTextureArial32c.tga  FontTextureArialUnicodeMS.tga  shotsling.tga
source/WallPaint/Textures/cross/: cross01.tga
source/WallPaint/Textures/numbers/: number00.tga  number01.tga  number02.tga  number03.tga  number04.tga  number05.tga  number06.tga  number07.tga  number08.tga  number09.tga
source/WallPaint/Textures/walls/: roomwall01.tga  roomwall02.tga  roomwall03.tga  roomwall04.tga  roomwall05.tga
source/WasmPaint/: CMakeLists.txt  main.cpp
source/WasmPaint/source/: engine.h
